force-app/main/default/objects/LinkedIn_Config__mdt/LinkedIn_Config__mdt.object-meta.xml
<CustomObject>
    <label>LinkedIn Config</label>
    <pluralLabel>LinkedIn Configs</pluralLabel>
</CustomObject>