force-app/main/default/objects/LinkedIn_Config__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://www.linkedin.com/oauth/v2/authorization&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>