force-app/main/default/objects/LinkedIn_Config__mdt/fields/commenturl__c.field-meta.xml
<CustomField>
    <fullName>commenturl__c</fullName>
    <defaultValue>&quot;https://api.linkedin.com/v2/socialActions/{shareUrn}/comments&quot;</defaultValue>
    <label>comment url</label>
    <type>Url</type>
</CustomField>