force-app/main/default/objects/LinkedIn_Config__mdt/fields/Create_Post__c.field-meta.xml
<CustomField>
    <fullName>Create_Post__c</fullName>
    <defaultValue>&quot;https://api.linkedin.com/v2/shares&quot;</defaultValue>
    <label>Create Post</label>
    <type>Url</type>
</CustomField>