force-app/main/default/objects/LinkedIn_Config__mdt/fields/likeurl__c.field-meta.xml
<CustomField>
    <fullName>likeurl__c</fullName>
    <defaultValue>&quot;https://api.linkedin.com/v2/socialActions/{shareUrn}/likes&quot;</defaultValue>
    <label>like url</label>
    <type>Url</type>
</CustomField>