force-app/main/default/objects/LinkedIn_Config__mdt/fields/LinkedPersonId__c.field-meta.xml
<CustomField>
    <fullName>LinkedPersonId__c</fullName>
    <label>Linked Person Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>