force-app/main/default/objects/LinkedIn_Config__mdt/fields/Profile_Url__c.field-meta.xml
<CustomField>
    <fullName>Profile_Url__c</fullName>
    <defaultValue>&quot;https://api.linkedin.com/v2/me&quot;</defaultValue>
    <label>Profile Url</label>
    <type>Url</type>
</CustomField>