force-app/main/default/objects/LinkedIn_Config__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://www.linkedin.com/oauth/v2/accessToken&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>